fix thread name and model, provider name overlapping

--- a/llm_thread/static/src/components/llm_chat_thread_header/llm_chat_thread_header.scss
+++ b/llm_thread/static/src/components/llm_chat_thread_header/llm_chat_thread_header.scss
@@ -1,13 +1,30 @@
 .o_ThreadViewTopbar {
     // Only keep styles that are specific to our use case and not covered by Odoo's classes
+    .o_ThreadViewTopbar_threadName {
+        max-width: 180px; // Limit thread name width on mobile
+        
+        @include media-breakpoint-up(sm) {
+            max-width: none;
+        }
+    }
+    
     .o_ThreadViewTopbar_threadDescription {
         display: inline-flex;
         align-items: center;
         font-size: 13px;
         color: $gray-600;
+        white-space: nowrap;
         
         @include media-breakpoint-down(sm) {
             font-size: 12px;
         }
+    }
+    
+    .o_ThreadViewTopbar_providerName {
+        color: $info;
+    }
+    
+    .o_ThreadViewTopbar_modelName {
+        color: $primary;
     }
 }
